Prevent scrollbars during LaneOverview animation.

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -8,6 +8,7 @@ body {
     background-color: #FFF;
     font-size: 15px;
     margin: 0;
+    overflow: hidden;
 
     @include large-screen {
         font-size: 18px;
